syntax = "proto3";
option go_package = "pkg/pb";
import "google/protobuf/empty.proto";

message CreateGlobalTransactionReq {
  string gid=1;
}

message CreateSubTransactionReq {
  string gid=1;
  string callback=2;
}

message CommitGlobalTransactionReq {
  string gid=1;
}

message RollbackGlobalTransactionReq {
  string gid=1;
}

service DM {
  rpc CreateGlobalTransaction(CreateGlobalTransactionReq) returns (google.protobuf.Empty);
  rpc CreateSubTransaction(CreateSubTransactionReq) returns (google.protobuf.Empty);
  rpc CommitGlobalTransaction(CommitGlobalTransactionReq) returns (google.protobuf.Empty);
  rpc RollbackGlobalTransaction(RollbackGlobalTransactionReq) returns (google.protobuf.Empty);
}
